--- a/plots/requirements.txt
+++ b/plots/requirements.txt
@@ -1,4 +1,6 @@
 matplotlib>=3.5.2
 numpy>=1.22.4
 pandas>=1.4.3
-git+ssh://git@github.com/oparry-ukaea/NekPlot.git@v0.1.0
+git+ssh://git@github.com/oparry-ukaea/NekPlot.git@v0.2.0#egg=NekPlot
+pyvista>=0.36.1
+imageio[ffmpeg]>=0.4.7
